<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splahs_art"
        android:alpha="0.15"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <Button
            android:id="@+id/btnClear"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:text="@string/btn_clear"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputValueFuel02"
            tools:ignore="VisualLintButtonSize,TextSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnCalcula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toTopOf="@+id/btnClear"
            tools:ignore="VisualLintButtonSize,TextSizeCheck" />

        <TextView
            android:id="@+id/tvFuel02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_two"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4" />

        <TextView
            android:id="@+id/tvFuel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_one"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />


        <ImageButton
            android:id="@+id/searchIcon01"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/txtInput01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/baseline_search_24_btn" />

        <ImageButton
            android:id="@+id/searchIcon02"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:srcCompat="@drawable/baseline_search_24_btn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInput01"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:enabled="false"
            android:hint="@string/hint_mpg"
            android:textColorHint="#A5A5A5"
            app:layout_constraintEnd_toStartOf="@+id/searchIcon01"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#A5A5A5"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInput02"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:hint="@string/hint_mpg"
            android:textColorHint="#A5A5A5"
            app:layout_constraintEnd_toStartOf="@+id/searchIcon02"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/txtInput01">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvValueFuel01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_one"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvValueFuel02"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/number_two"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputValueFuel01"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/gas_value"
            android:textColorHint="#A5A5A5"
            app:layout_constraintEnd_toStartOf="@+id/searchIcon02"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/txtInput02">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputValueFuel02"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/gas_value"
            android:textColorHint="#A5A5A5"
            app:layout_constraintEnd_toStartOf="@+id/searchIcon02"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/txtInputValueFuel01">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/txtInputValueFuel01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtInputValueFuel01"
            app:srcCompat="@drawable/baseline_monetization_on_24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/txtInputValueFuel02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtInputValueFuel02"
            app:srcCompat="@drawable/baseline_monetization_on_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/txtInput01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtInput01"
            app:srcCompat="@drawable/baseline_local_gas_station_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/txtInput02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtInput02"
            app:srcCompat="@drawable/baseline_local_gas_station_24" />

        <TextView
            android:id="@+id/tvResult01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/mpg_cost"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcula" />

        <TextView
            android:id="@+id/tvResult02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mpg_cost"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tvResult01"
            app:layout_constraintTop_toBottomOf="@+id/tvResult01" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>